@@ -86,6 +86,8 @@ xx/xx/2005 - 1.12.2-WIP
 	  users to submit it, thus write speed to very fragmented files
 	  dramatically increased, while write speed to low fragmented files
 	  stayed at approximately same level.  (Yura)
+	- Automatically update access and change time in ntfs_attr_p{read,write}
+	  and ntfs_attr_truncate.  (Yura)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
